fix on stretched intro image

--- a/public/css/style.css
+++ b/public/css/style.css
@@ -103,7 +103,6 @@ img {vertical-align: middle;}
   } 
   #intro img{
     width:80%;
-    height: 35vh;
     border-radius: 2vh;
     margin-top: 10vh;
   }    
